# Atlas-SMR-Replica

./: Cargo.toml
src/: lib.rs
src/config/: mod.rs
src/follower/: mod.rs
src/metric/: mod.rs
src/persistent_log/: mod.rs
src/server/: decision_log.rs  mod.rs  state_transfer.rs  unordered_rq_handler.rs
src/server/client_replier/: mod.rs
src/server/divisible_state_server/: mod.rs  state_transfer.rs
src/server/follower_handling/: mod.rs
src/server/monolithic_server/: mod.rs  state_transfer.rs
src/server/observer/: mod.rs
src/server/timeout_handler/: mod.rs
