[package]
name = "atlas-replica"
version = "0.1.0"
description = "The replica of the Atlas SMR project."
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/nuno1212s/atlas"
repository = "https://github.com/nuno1212s/atlas"
documentation = "https://docs.rs/atlas"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

serialize_serde = ["atlas-core/serialize_serde", "atlas-communication/serialize_serde",
    "atlas-execution/serialize_serde", "atlas-common/serialize_serde", "atlas-persistent-log/serialize_serde", "atlas-reconfiguration/serialize_serde"]
serialize_capnp = ["atlas-core/serialize_capnp", "atlas-execution/serialize_capnp",
    "atlas-communication/serialize_capnp", "atlas-persistent-log/serialize_capnp"]

default = ["serialize_serde"]

[dependencies]
log = "0.4.17"
chrono = "0.4.23"
atlas-communication = { path = "../atlas-communication" }
atlas-execution = { path = "../atlas-smr-application" }
atlas-common = { path = "../atlas-common" }
atlas-core = { path = "../atlas-core" }
atlas-metrics = { path = "../atlas-metrics" }
atlas-persistent-log = { path = "../atlas-persistent-log" }
atlas-reconfiguration = { path = "../atlas-reconfiguration" }
atlas-smr-exec = { path = "../atlas-smr-exec" }
futures-timer = "3.0.2"